fix misaligned text on lead field

--- a/frontend/src/components/ProjectTable.css
+++ b/frontend/src/components/ProjectTable.css
@@ -33,3 +33,11 @@ table {
 thead, tbody, tfoot {
 	border-bottom: 2px solid #091E4224;
 }
+
+.leadName {
+	vertical-align: middle;
+	margin: 2px;
+}
+td {
+
+}
